packages/pkl-ts-parser/src/antlr4/ts/PklTsParser.ts
// Generated from ./src/antlr4/PklTsParser.g4 by ANTLR 4.13.1

import * as antlr from 'antlr4ng';
import { Token } from 'antlr4ng';

import { PklTsParserListener } from './PklTsParserListener.js';
import { PklTsParserVisitor } from './PklTsParserVisitor.js';

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

import { PklTsLexer } from './PklTsLexer';

export class PklTsParser extends antlr.Parser {
  public static readonly ABSTRACT = 1;
  public static readonly AMENDS = 2;
  public static readonly AS = 3;
  public static readonly CLASS = 4;
  public static readonly CONST = 5;
  public static readonly ELSE = 6;
  public static readonly EXTENDS = 7;
  public static readonly EXTERNAL = 8;
  public static readonly FALSE = 9;
  public static readonly FIXED = 10;
  public static readonly FOR = 11;
  public static readonly FUNCTION = 12;
  public static readonly HIDDEN_ = 13;
  public static readonly IF = 14;
  public static readonly IMPORT = 15;
  public static readonly IMPORT_GLOB = 16;
  public static readonly IN = 17;
  public static readonly IS = 18;
  public static readonly LET = 19;
  public static readonly LOCAL = 20;
  public static readonly MODULE = 21;
  public static readonly NEW = 22;
  public static readonly NOTHING = 23;
  public static readonly NULL = 24;
  public static readonly OPEN = 25;
  public static readonly OUT = 26;
  public static readonly OUTER = 27;
  public static readonly READ = 28;
  public static readonly READ_GLOB = 29;
  public static readonly READ_OR_NULL = 30;
  public static readonly SUPER = 31;
  public static readonly THIS = 32;
  public static readonly THROW = 33;
  public static readonly TRACE = 34;
  public static readonly TRUE = 35;
  public static readonly TYPE_ALIAS = 36;
  public static readonly UNKNOWN = 37;
  public static readonly WHEN = 38;
  public static readonly PROTECTED = 39;
  public static readonly OVERRIDE = 40;
  public static readonly RECORD = 41;
  public static readonly DELETE = 42;
  public static readonly CASE = 43;
  public static readonly SWITCH = 44;
  public static readonly VARARG = 45;
  public static readonly LPAREN = 46;
  public static readonly RPAREN = 47;
  public static readonly LBRACE = 48;
  public static readonly RBRACE = 49;
  public static readonly LBRACK = 50;
  public static readonly RBRACK = 51;
  public static readonly LPRED = 52;
  public static readonly COMMA = 53;
  public static readonly DOT = 54;
  public static readonly QDOT = 55;
  public static readonly COALESCE = 56;
  public static readonly NON_NULL = 57;
  public static readonly AT = 58;
  public static readonly ASSIGN = 59;
  public static readonly GT = 60;
  public static readonly LT = 61;
  public static readonly NOT = 62;
  public static readonly QUESTION = 63;
  public static readonly COLON = 64;
  public static readonly ARROW = 65;
  public static readonly EQUAL = 66;
  public static readonly NOT_EQUAL = 67;
  public static readonly LTE = 68;
  public static readonly GTE = 69;
  public static readonly AND = 70;
  public static readonly OR = 71;
  public static readonly PLUS = 72;
  public static readonly MINUS = 73;
  public static readonly POW = 74;
  public static readonly STAR = 75;
  public static readonly DIV = 76;
  public static readonly INT_DIV = 77;
  public static readonly MOD = 78;
  public static readonly UNION = 79;
  public static readonly PIPE = 80;
  public static readonly SPREAD = 81;
  public static readonly QSPREAD = 82;
  public static readonly UNDERSCORE = 83;
  public static readonly SLQuote = 84;
  public static readonly MLQuote = 85;
  public static readonly IntLiteral = 86;
  public static readonly FloatLiteral = 87;
  public static readonly Identifier = 88;
  public static readonly NewlineSemicolon = 89;
  public static readonly Whitespace = 90;
  public static readonly DocComment = 91;
  public static readonly BlockComment = 92;
  public static readonly LineComment = 93;
  public static readonly ShebangComment = 94;
  public static readonly SLEndQuote = 95;
  public static readonly SLInterpolation = 96;
  public static readonly SLUnicodeEscape = 97;
  public static readonly SLCharacterEscape = 98;
  public static readonly SLCharacters = 99;
  public static readonly MLEndQuote = 100;
  public static readonly MLInterpolation = 101;
  public static readonly MLUnicodeEscape = 102;
  public static readonly MLCharacterEscape = 103;
  public static readonly MLNewline = 104;
  public static readonly MLCharacters = 105;
  public static readonly RULE_replInput = 0;
  public static readonly RULE_exprInput = 1;
  public static readonly RULE_module = 2;
  public static readonly RULE_moduleDecl = 3;
  public static readonly RULE_moduleHeader = 4;
  public static readonly RULE_moduleExtendsOrAmendsClause = 5;
  public static readonly RULE_importClause = 6;
  public static readonly RULE_clazz = 7;
  public static readonly RULE_classHeader = 8;
  public static readonly RULE_modifier = 9;
  public static readonly RULE_classBody = 10;
  public static readonly RULE_typeAlias = 11;
  public static readonly RULE_typeAliasHeader = 12;
  public static readonly RULE_classProperty = 13;
  public static readonly RULE_classMethod = 14;
  public static readonly RULE_methodHeader = 15;
  public static readonly RULE_parameterList = 16;
  public static readonly RULE_argumentList = 17;
  public static readonly RULE_annotation = 18;
  public static readonly RULE_qualifiedIdentifier = 19;
  public static readonly RULE_typeAnnotation = 20;
  public static readonly RULE_typeParameterList = 21;
  public static readonly RULE_typeParameter = 22;
  public static readonly RULE_typeArgumentList = 23;
  public static readonly RULE_type = 24;
  public static readonly RULE_typedIdentifier = 25;
  public static readonly RULE_parameter = 26;
  public static readonly RULE_expr = 27;
  public static readonly RULE_objectBody = 28;
  public static readonly RULE_objectMember = 29;
  public static readonly RULE_stringConstant = 30;
  public static readonly RULE_singleLineStringPart = 31;
  public static readonly RULE_multiLineStringPart = 32;
  public static readonly RULE_reservedKeyword = 33;

  public static readonly literalNames = [
    null,
    "'abstract'",
    "'amends'",
    "'as'",
    "'class'",
    "'const'",
    "'else'",
    "'extends'",
    "'external'",
    "'false'",
    "'fixed'",
    "'for'",
    "'function'",
    "'hidden'",
    "'if'",
    "'import'",
    "'import*'",
    "'in'",
    "'is'",
    "'let'",
    "'local'",
    "'module'",
    "'new'",
    "'nothing'",
    "'null'",
    "'open'",
    "'out'",
    "'outer'",
    "'read'",
    "'read*'",
    "'read?'",
    "'super'",
    "'this'",
    "'throw'",
    "'trace'",
    "'true'",
    "'typealias'",
    "'unknown'",
    "'when'",
    "'protected'",
    "'override'",
    "'record'",
    "'delete'",
    "'case'",
    "'switch'",
    "'vararg'",
    "'('",
    "')'",
    "'{'",
    "'}'",
    "'['",
    "']'",
    "'[['",
    "','",
    "'.'",
    "'?.'",
    "'??'",
    "'!!'",
    "'@'",
    "'='",
    "'>'",
    "'<'",
    "'!'",
    "'?'",
    "':'",
    "'->'",
    "'=='",
    "'!='",
    "'<='",
    "'>='",
    "'&&'",
    "'||'",
    "'+'",
    "'-'",
    "'**'",
    "'*'",
    "'/'",
    "'~/'",
    "'%'",
    "'|'",
    "'|>'",
    "'...'",
    "'...?'",
    "'_'",
  ];

  public static readonly symbolicNames = [
    null,
    'ABSTRACT',
    'AMENDS',
    'AS',
    'CLASS',
    'CONST',
    'ELSE',
    'EXTENDS',
    'EXTERNAL',
    'FALSE',
    'FIXED',
    'FOR',
    'FUNCTION',
    'HIDDEN_',
    'IF',
    'IMPORT',
    'IMPORT_GLOB',
    'IN',
    'IS',
    'LET',
    'LOCAL',
    'MODULE',
    'NEW',
    'NOTHING',
    'NULL',
    'OPEN',
    'OUT',
    'OUTER',
    'READ',
    'READ_GLOB',
    'READ_OR_NULL',
    'SUPER',
    'THIS',
    'THROW',
    'TRACE',
    'TRUE',
    'TYPE_ALIAS',
    'UNKNOWN',
    'WHEN',
    'PROTECTED',
    'OVERRIDE',
    'RECORD',
    'DELETE',
    'CASE',
    'SWITCH',
    'VARARG',
    'LPAREN',
    'RPAREN',
    'LBRACE',
    'RBRACE',
    'LBRACK',
    'RBRACK',
    'LPRED',
    'COMMA',
    'DOT',
    'QDOT',
    'COALESCE',
    'NON_NULL',
    'AT',
    'ASSIGN',
    'GT',
    'LT',
    'NOT',
    'QUESTION',
    'COLON',
    'ARROW',
    'EQUAL',
    'NOT_EQUAL',
    'LTE',
    'GTE',
    'AND',
    'OR',
    'PLUS',
    'MINUS',
    'POW',
    'STAR',
    'DIV',
    'INT_DIV',
    'MOD',
    'UNION',
    'PIPE',
    'SPREAD',
    'QSPREAD',
    'UNDERSCORE',
    'SLQuote',
    'MLQuote',
    'IntLiteral',
    'FloatLiteral',
    'Identifier',
    'NewlineSemicolon',
    'Whitespace',
    'DocComment',
    'BlockComment',
    'LineComment',
    'ShebangComment',
    'SLEndQuote',
    'SLInterpolation',
    'SLUnicodeEscape',
    'SLCharacterEscape',
    'SLCharacters',
    'MLEndQuote',
    'MLInterpolation',
    'MLUnicodeEscape',
    'MLCharacterEscape',
    'MLNewline',
    'MLCharacters',
  ];
  public static readonly ruleNames = [
    'replInput',
    'exprInput',
    'module',
    'moduleDecl',
    'moduleHeader',
    'moduleExtendsOrAmendsClause',
    'importClause',
    'clazz',
    'classHeader',
    'modifier',
    'classBody',
    'typeAlias',
    'typeAliasHeader',
    'classProperty',
    'classMethod',
    'methodHeader',
    'parameterList',
    'argumentList',
    'annotation',
    'qualifiedIdentifier',
    'typeAnnotation',
    'typeParameterList',
    'typeParameter',
    'typeArgumentList',
    'type',
    'typedIdentifier',
    'parameter',
    'expr',
    'objectBody',
    'objectMember',
    'stringConstant',
    'singleLineStringPart',
    'multiLineStringPart',
    'reservedKeyword',
  ];

  public get grammarFileName(): string {
    return 'PklTsParser.g4';
  }
  public get literalNames(): (string | null)[] {
    return PklTsParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return PklTsParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return PklTsParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return PklTsParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): antlr.FailedPredicateException {
    return new antlr.FailedPredicateException(this, predicate, message);
  }

  /**
   * Returns true if and only if the next token to be consumed is not preceded by a newline or semicolon.
   */
  noNewlineOrSemicolon(): boolean {
    for (let i = this.inputStream.index - 1; i >= 0; i--) {
      let token = this.inputStream.get(i);
      let channel = token.channel;
      if (channel === PklTsLexer.DEFAULT_TOKEN_CHANNEL) return true;
      if (channel === PklTsLexer.NewlineSemicolon) return false;
    }
    return true;
  }

  public constructor(input: antlr.TokenStream) {
    super(input);
    this.interpreter = new antlr.ParserATNSimulator(
      this,
      PklTsParser._ATN,
      PklTsParser.decisionsToDFA,
      new antlr.PredictionContextCache(),
    );
  }
  public replInput(): ReplInputContext {
    let localContext = new ReplInputContext(this.context, this.state);
    this.enterRule(localContext, 0, PklTsParser.RULE_replInput);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 79;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 4219074486) !== 0) ||
          (((_la - 32) & ~0x1f) === 0 &&
            ((1 << (_la - 32)) & 1140867103) !== 0) ||
          (((_la - 73) & ~0x1f) === 0 && ((1 << (_la - 73)) & 325633) !== 0)
        ) {
          {
            {
              this.state = 75;
              this.errorHandler.sync(this);
              switch (
                this.interpreter.adaptivePredict(
                  this.tokenStream,
                  0,
                  this.context,
                )
              ) {
                case 1:
                  {
                    this.state = 68;
                    this.moduleDecl();
                  }
                  break;
                case 2:
                  {
                    this.state = 69;
                    this.importClause();
                  }
                  break;
                case 3:
                  {
                    this.state = 70;
                    this.clazz();
                  }
                  break;
                case 4:
                  {
                    this.state = 71;
                    this.typeAlias();
                  }
                  break;
                case 5:
                  {
                    this.state = 72;
                    this.classProperty();
                  }
                  break;
                case 6:
                  {
                    this.state = 73;
                    this.classMethod();
                  }
                  break;
                case 7:
                  {
                    this.state = 74;
                    this.expr(0);
                  }
                  break;
              }
            }
          }
          this.state = 81;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 82;
        this.match(PklTsParser.EOF);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public exprInput(): ExprInputContext {
    let localContext = new ExprInputContext(this.context, this.state);
    this.enterRule(localContext, 2, PklTsParser.RULE_exprInput);
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 84;
        this.expr(0);
        this.state = 85;
        this.match(PklTsParser.EOF);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public module_(): ModuleContext {
    let localContext = new ModuleContext(this.context, this.state);
    this.enterRule(localContext, 4, PklTsParser.RULE_module);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 88;
        this.errorHandler.sync(this);
        switch (
          this.interpreter.adaptivePredict(this.tokenStream, 2, this.context)
        ) {
          case 1:
            {
              this.state = 87;
              this.moduleDecl();
            }
            break;
        }
        this.state = 93;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 15 || _la === 16) {
          {
            {
              this.state = 90;
              localContext._importClause = this.importClause();
              localContext._is.push(localContext._importClause);
            }
          }
          this.state = 95;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 104;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 34616626) !== 0) ||
          _la === 36 ||
          _la === 58 ||
          _la === 88 ||
          _la === 91
        ) {
          {
            {
              this.state = 100;
              this.errorHandler.sync(this);
              switch (
                this.interpreter.adaptivePredict(
                  this.tokenStream,
                  4,
                  this.context,
                )
              ) {
                case 1:
                  {
                    this.state = 96;
                    localContext._clazz = this.clazz();
                    localContext._cs.push(localContext._clazz);
                  }
                  break;
                case 2:
                  {
                    this.state = 97;
                    localContext._typeAlias = this.typeAlias();
                    localContext._ts.push(localContext._typeAlias);
                  }
                  break;
                case 3:
                  {
                    this.state = 98;
                    localContext._classProperty = this.classProperty();
                    localContext._ps.push(localContext._classProperty);
                  }
                  break;
                case 4:
                  {
                    this.state = 99;
                    localContext._classMethod = this.classMethod();
                    localContext._ms.push(localContext._classMethod);
                  }
                  break;
              }
            }
          }
          this.state = 106;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 107;
        this.match(PklTsParser.EOF);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public moduleDecl(): ModuleDeclContext {
    let localContext = new ModuleDeclContext(this.context, this.state);
    this.enterRule(localContext, 6, PklTsParser.RULE_moduleDecl);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 110;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 91) {
          {
            this.state = 109;
            localContext._t = this.match(PklTsParser.DocComment);
          }
        }

        this.state = 115;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 58) {
          {
            {
              this.state = 112;
              this.annotation();
            }
          }
          this.state = 117;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 118;
        this.moduleHeader();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public moduleHeader(): ModuleHeaderContext {
    let localContext = new ModuleHeaderContext(this.context, this.state);
    this.enterRule(localContext, 8, PklTsParser.RULE_moduleHeader);
    let _la: number;
    try {
      this.state = 132;
      this.errorHandler.sync(this);
      switch (this.tokenStream.LA(1)) {
        case PklTsParser.ABSTRACT:
        case PklTsParser.CONST:
        case PklTsParser.EXTERNAL:
        case PklTsParser.FIXED:
        case PklTsParser.HIDDEN_:
        case PklTsParser.LOCAL:
        case PklTsParser.MODULE:
        case PklTsParser.OPEN:
          this.enterOuterAlt(localContext, 1);
          {
            this.state = 123;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((_la & ~0x1f) === 0 && ((1 << _la) & 34612514) !== 0) {
              {
                {
                  this.state = 120;
                  this.modifier();
                }
              }
              this.state = 125;
              this.errorHandler.sync(this);
              _la = this.tokenStream.LA(1);
            }
            this.state = 126;
            this.match(PklTsParser.MODULE);
            this.state = 127;
            this.qualifiedIdentifier();
            this.state = 129;
            this.errorHandler.sync(this);
            switch (
              this.interpreter.adaptivePredict(
                this.tokenStream,
                9,
                this.context,
              )
            ) {
              case 1:
                {
                  this.state = 128;
                  this.moduleExtendsOrAmendsClause();
                }
                break;
            }
          }
          break;
        case PklTsParser.AMENDS:
        case PklTsParser.EXTENDS:
          this.enterOuterAlt(localContext, 2);
          {
            this.state = 131;
            this.moduleExtendsOrAmendsClause();
          }
          break;
        default:
          throw new antlr.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public moduleExtendsOrAmendsClause(): ModuleExtendsOrAmendsClauseContext {
    let localContext = new ModuleExtendsOrAmendsClauseContext(
      this.context,
      this.state,
    );
    this.enterRule(
      localContext,
      10,
      PklTsParser.RULE_moduleExtendsOrAmendsClause,
    );
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 134;
        localContext._t = this.tokenStream.LT(1);
        _la = this.tokenStream.LA(1);
        if (!(_la === 2 || _la === 7)) {
          localContext._t = this.errorHandler.recoverInline(this);
        } else {
          this.errorHandler.reportMatch(this);
          this.consume();
        }
        this.state = 135;
        this.stringConstant();
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public importClause(): ImportClauseContext {
    let localContext = new ImportClauseContext(this.context, this.state);
    this.enterRule(localContext, 12, PklTsParser.RULE_importClause);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 137;
        localContext._t = this.tokenStream.LT(1);
        _la = this.tokenStream.LA(1);
        if (!(_la === 15 || _la === 16)) {
          localContext._t = this.errorHandler.recoverInline(this);
        } else {
          this.errorHandler.reportMatch(this);
          this.consume();
        }
        this.state = 138;
        this.stringConstant();
        this.state = 141;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 3) {
          {
            this.state = 139;
            this.match(PklTsParser.AS);
            this.state = 140;
            this.match(PklTsParser.Identifier);
          }
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public clazz(): ClazzContext {
    let localContext = new ClazzContext(this.context, this.state);
    this.enterRule(localContext, 14, PklTsParser.RULE_clazz);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 144;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 91) {
          {
            this.state = 143;
            localContext._t = this.match(PklTsParser.DocComment);
          }
        }

        this.state = 149;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while (_la === 58) {
          {
            {
              this.state = 146;
              this.annotation();
            }
          }
          this.state = 151;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 152;
        this.classHeader();
        this.state = 154;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 48) {
          {
            this.state = 153;
            this.classBody();
          }
        }
      }
    } catch (re) {
      if (re instanceof antlr.RecognitionException) {
        localContext.exception = re;
        this.errorHandler.reportError(this, re);
        this.errorHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localContext;
  }
  public classHeader(): ClassHeaderContext {
    let localContext = new ClassHeaderContext(this.context, this.state);
    this.enterRule(localContext, 16, PklTsParser.RULE_classHeader);
    let _la: number;
    try {
      this.enterOuterAlt(localContext, 1);
      {
        this.state = 159;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        while ((_la & ~0x1f) === 0 && ((1 << _la) & 34612514) !== 0) {
          {
            {
              this.state = 156;
              this.modifier();
            }
          }
          this.state = 161;
          this.errorHandler.sync(this);
          _la = this.tokenStream.LA(1);
        }
        this.state = 162;
        this.match(PklTsParser.CLASS);
        this.state = 163;
        this.match(PklTsParser.Identifier);
        this.state = 165;
        this.errorHandler.sync(this);
        _la = this.tokenStream.LA(1);
        if (_la === 61) {
          {
            this.state = 164;
            this.typeParameterList();
          }
        }
